--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "sweetalert2": "^11.12.4",
     "vue": "^3.4.29",
     "vue-router": "^4.4.2"
   },
